Documentation edits made through Mintlify web editor

--- a/releases/2025-01-v0-0-24.mdx
+++ b/releases/2025-01-v0-0-24.mdx
@@ -1,5 +1,53 @@
 ---
-title: "2025 01 V0 0 24 Mdx"
+title: "🎁 What’s New in Brixo (v0.0.24)"
 ---
 
-Hello
+This release focuses on helping you **find things faster**, **stay oriented as you explore**, and **read and understand information more easily** across the app.
+
+Below are the most important user-facing improvements since v0.0.23. (As always, this isn’t every single change—just the ones we think deliver the most value.)
+
+---
+
+## **🔎 Find What You Need Faster**
+
+- **Advanced Global Search**
+
+  A powerful new search bar lets you quickly find users, accounts, and signals from anywhere in the app—dramatically speeding up navigation.
+- **Smarter Explorer Interactions**
+  - “View all” and chip filters now behave more reliably and consistently reflect your selected filters.
+  - “Wins” and “Issues” are now counted and displayed consistently across dashboards, profiles, and Explorer.
+
+---
+
+## **🧭 Stay Oriented as You Explore**
+
+- **Predictable Navigation**
+
+  Conversation pages now include “Back” buttons that remember your filters, so you can return exactly where you left off in Explorer or Dashboard.
+- **Persistent Filters & Views**
+
+  Your selected filters and user-specific views now stick as you move through the app—reducing extra clicks and preventing unexpected resets.
+- **Clearer Empty States**
+
+  Improved indicators (like “No topics”) make it obvious when content isn’t available, reducing confusion.
+
+---
+
+## **🧑‍💻 Clearer, More Readable Interface**
+
+- **Time-Aware Dates**
+  - Dates now display in a simple “time ago” format (e.g. “3 hours ago”) for faster readability.
+  - All dates and times now respect your local time zone for clearer context.
+- **Cleaner Visuals**
+
+  Updated icons and header layouts provide a more modern, scannable interface—making key details easier to spot at a glance.
+- **Efforts & Quick Links**
+
+  Conversation headers now highlight effort levels with color and offer faster access to related profiles.
+- **Customizable Time Filters**
+
+  User profiles let you select different date ranges for stats and charts, so you can focus on exactly the timeframe you care about.
+
+---
+
+Thanks for using Brixo! We hope these updates make your day-to-day workflows smoother, faster, and more intuitive.
