--- a/releases/2025-01-v0-0-24.mdx
+++ b/releases/2025-01-v0-0-24.mdx
@@ -1,5 +1,5 @@
 ---
-title: "🎁 Jan 24th 2026 (v0.0.24)"
+title: "🎁 v0.0.24 (Jan 23, 2026)"
 ---
 
 This release focuses on helping you **find things faster**, **stay oriented as you explore**, and **read and understand information more easily** across the app.
