--- a/releases/2025-01-v0-0-24-copied-1.mdx
+++ b/releases/2025-01-v0-0-24-copied-1.mdx
@@ -1,5 +1,6 @@
 ---
 title: "v0.0.23 (Jan 21, 2026)"
+description: "Jan 21, 2026"
 ---
 
 This release focuses on helping you **find things faster**, **stay oriented as you explore**, and **read and understand information more easily** across the app.
