Documentation edits made through Mintlify web editor

--- a/releases/2025-01-v0-0-24.mdx
+++ b/releases/2025-01-v0-0-24.mdx
@@ -1,6 +1,6 @@
 ---
 title: "v0.0.24 (Jan 23, 2026)"
-description: "Room for Subtext here ..."
+description: "Faster navigation, more predictable exploration, and clearer UI across the app."
 ---
 
 This release focuses on helping you **find things faster**, **stay oriented as you explore**, and **read and understand information more easily** across the app.
