Documentation edits made through Mintlify web editor

--- a/releases/2026-01-v0-0-25.mdx
+++ b/releases/2026-01-v0-0-25.mdx
@@ -3,7 +3,7 @@ title: "v0.0.25 (Feb 2, 2026)"
 description: "Smoother administration, faster exploration and reliable data imports."
 ---
 
-This release delivers clearer administration, better time context, faster exploration, more reliable data imports — plus meaningful infrastructure upgrades to improve reliability and scale as usage grows.
+This release delivers **smoother administration**, **better time context**, **faster exploration**, more **reliable data imports** — plus meaningful infrastructure upgrades to improve reliability and scale as usage grows.
 
 Below are the most important user-facing improvements since v0.0.24. (As always, this isn’t every single change—just the ones we think deliver the most value.)
 
