Improve clarity in release notes for v0.0.26

--- a/releases/2026-01-v0-0-26.mdx
+++ b/releases/2026-01-v0-0-26.mdx
@@ -11,24 +11,40 @@ Below are the most important changes since v0.0.25 (not every internal tweak, ju
 
 ## 🛡️ **Admin & team management**
 
-- Added a **Team section** in Admin Settings (with Members tab) so you can view team members, change roles, and remove users directly in the console. → Admins can now manage access without switching tools or contexts.
-- Organization **domain** is now stored, backfilled, and surfaced in the UI and access flows. → Access control is more reliable and organization identity is clearer at a glance.
+- Added a **Team section** in Admin Settings (with Members tab) so you can view team members, change roles, and remove users directly in the console. 
+
+  → Admins can now manage access without switching tools or contexts.
+- Organization **domain** is now stored, backfilled, and surfaced in the UI and access flows. 
+
+  → Access control is more reliable and organization identity is clearer at a glance.
 
 ---
 
 ## 📊 **Exploration & analytics power**
 
-- Explorer now supports **include/exclude filter chips** and query syntax to exclude specific values while keeping default include behavior. → End users get more precise filtering without workarounds.
-- New rolling **“Last year”** time range (with weekly bucketing) added across Dashboard, Directories, and Explorer. → Enables longer-term trend analysis with readable charts instead of cramped views.
+- Explorer now supports **include/exclude filter chips** and query syntax to exclude specific values while keeping default include behavior. 
+
+  → End users get more precise filtering without workarounds.
+- New rolling **“Last year”** time range (with weekly bucketing) added across Dashboard, Directories, and Explorer. 
+
+  → Enables longer-term trend analysis with readable charts instead of cramped views.
 
 ---
 
 ## ✨ **Smaller UX & reliability wins**
 
-- Default sort column in Explorer now shows the **sort direction icon**. → Tables are clearer at first glance—no guessing about ordering.
-- Environment dropdown **refreshes options on open** (on-demand). → You always see the latest environments without stale data.
-- API key **created/last-used dates** use a consistent shared timestamp component (tooltips off by default). → Cleaner, more polished admin UI.
-- Consistent **minus/dash character** used in preferences copy. → Minor polish that improves readability everywhere.
+- Default sort column in Explorer now shows the **sort direction icon**. 
+
+  → Tables are clearer at first glance—no guessing about ordering.
+- Environment dropdown **refreshes options on open** (on-demand). 
+
+  → You always see the latest environments without stale data.
+- API key **created/last-used dates** use a consistent shared timestamp component (tooltips off by default). 
+
+  → Cleaner, more polished admin UI.
+- Consistent **minus/dash character** used in preferences copy. 
+
+  → Minor polish that improves readability everywhere.
 
 ---
 
