--- a/releases/2026-02-v0-0-31.mdx
+++ b/releases/2026-02-v0-0-31.mdx
@@ -29,10 +29,8 @@ Below are the most important changes in this release (not every internal tweak, 
 - **Cleaner conversation readability:** Conversation marker events are positioned more clearly between user and assistant messages — It’s easier to follow the flow of a conversation while reviewing sessions.
 - **Clearer product language:** “User Goals” was renamed to “User Intents” across key analytics views — Analytics labels better match what the insights represent, reducing confusion.
 
-## 📥 **Imports and feedback collection**
+## 📥 ** Feedback collection**
 
-- **Guided import flow with validation and review:** A new step-by-step import flow was added for conversation data (upload, field mapping, final review), including upfront file checks, automatic mapping suggestions, and a pre-import summary — Teams can catch issues earlier and feel confident about what will be imported before it runs.
-- **Imports page for job tracking:** A new Imports page shows recent import jobs and their statuses — You can quickly confirm whether an import is running, succeeded, or needs attention.
 - **Thumbs feedback on messages and conversations:** You can capture thumbs-up/thumbs-down feedback on individual messages and full conversations, with an optional written note up to 2,000 characters — You can collect higher-signal feedback with context, improving review and iteration.
 - **Faster feedback submissions during high volume:** Feedback submissions are accepted immediately and processed in the background — Users get a quicker response and feedback collection remains reliable under load.
 
