Update Python SDK v0.1.6 release title

--- a/releases/2026-02-python-sdk-v0-1-6.mdx
+++ b/releases/2026-02-python-sdk-v0-1-6.mdx
@@ -1,5 +1,5 @@
 ---
-title: "v0.1.6 (Feb 19, 2026)"
+title: "Brixo Python SDK v0.1.6 (Feb 19, 2026)"
 description: "Improved reliability for async tracing and safer SDK initialization."
 ---
 
